--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="result">
         <div id="win" class="versus font-weight-bold">
-          <h1>VS</h1>
+          <h1 class="font-weight-bold">VS</h1>
         </div>
       </div>
       <div class="computer">
