fixing button refresh and fixing pick option player

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <button id="scissor-player"><img src="assets/gunting.png" alt="Gunting" width="84px" height="auto" /></button>
       </div>
       <div class="result">
-        <div id="win" class="versus font-weight-bold">
-          <h1 class="font-weight-bold">VS</h1>
+        <div class="versus font-weight-bold">
+          <h1 id="win" class="versus font-weight-bold">VS</h1>
         </div>
       </div>
       <div class="computer">
